# ProjectAyaya

./: .gitignore  Makefile  SNAKE_DESIGN  build.gradle.kts  gdb.txt  generate_headers.sh  readme.md  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build.yml  rust-clippy.yml
ayaya_native/: .gitignore  Cargo.toml  Cross.toml  Dockerfile  \  build.rs  credits.txt
ayaya_native/main/: 2  ;  Cargo.toml  Cross.toml  \  benchmark  build.rs  external_player_design.txt  minecraft_packet_pipeline.txt
ayaya_native/main/src/: colorlib.rs  fast_transform.c  lib.rs  map_server.rs  splitting.rs
ayaya_native/main/src/apps/: calculator.rs  falling_blocks.rs  mod.rs  snake.rs
ayaya_native/main/src/external_player/: data_structures.c  data_structures.h  external_player.c  logger.h  rust.h
ayaya_native/main/src/player/: blazing_linux_player.rs  discord_audio.rs  external_player.rs  falling_blocks.rs  game_player.rs  mod.rs  multi_video_player.rs  player_context.rs  single_video_player.rs  snake.rs  x11_player.rs
ayaya_native/main/windows-cross/: Dockerfile  Makefile
ayaya_native/src/: .lib.rs.rustfmt  colorlib.rs  lib.rs  map_server.rs  splitting.rs  test.rs  threading.rs  video_player.rs
ayaya_native/src/player/: falling_blocks.rs  flappy_bird.rs  game_player.rs  gpu_player.rs  mod.rs  multi_video_player.rs  player_context.rs  single_video_player.rs  x11_player.rs
ayaya_native/windows-cross/: Dockerfile
ayaya_native/windows_bootstrap/: Cargo.toml
ayaya_native/windows_bootstrap/src/: lib.rs
benchmark/: ffmpeg.txt  ffmpeg2.txt  ffmpeg3.txt  ffmpeg4.txt  main.py
fastmaprenderer/: LICENSE  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
fastmaprenderer/src/main/java/me/wcaleniewolny/ayaya/fastmaprenderer/fastmaprenderer/: FastMapRenderer.java
fastmaprenderer/src/main/java/me/wcaleniewolny/ayaya/fastmaprenderer/fastmaprenderer/client/: ClientDisconnectCallback.java  FastMapRendererClient.java  RenderMetadata.java
fastmaprenderer/src/main/java/me/wcaleniewolny/ayaya/fastmaprenderer/fastmaprenderer/client/netty/: CompressionDecoder.java  MapNettyClient.java  NettyDataHandler.java
fastmaprenderer/src/main/java/me/wcaleniewolny/ayaya/fastmaprenderer/fastmaprenderer/mixin/: ClientConnectionMixin.java  ClientPlayNetworkHandlerAccessor.java  ClientPlayNetworkHandlerMixin.java  MapRendererInvoker.java  MapRendererMixin.java  MapStateMixin.java  MapTextureAccessor.java  MapTextureMixin.java  MinecraftClientAccessor.java
fastmaprenderer/src/main/resources/: FastMapRenderer.mixins.json  fabric.mod.json  fastmaprenderer.accesswidener
minecraft/: build.gradle.kts
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/: MapMinecraftClient.kt  NativeUtils.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/command/: VideoCommand.kt  VideoCommandCompletion.kt  VideoPlayType.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/display/: DisplayService.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/display/broadcaster/: Broadcaster.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/display/broadcaster/impl/: MinecraftNativeBroadcaster.kt  NativeMinecraftBroadcaster.kt  ProtocolLibBroadcaster.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/display/impl/: DisplayServiceImpl.kt  NettyRawDisplayServiceImpl.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/extenstion/: WorldExtenstion.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/game/: NativeGame.kt  NativeGameController.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/map/: MapCleanerService.kt  MapScreen.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/playback/: PlaybackController.kt  PlaybackControllerFactory.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/render/: RenderService.kt  RenderServiceFactory.kt  RenderThread.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/render/impl/: JavaRenderServiceImpl.kt  NativeRenderServiceImpl.kt  RenderThreadGameImpl.kt  RenderThreadVideoImpl.kt
minecraft/src/main/kotlin/me/wcaleniewolny/ayaya/minecraft/screen/: FakeBukkitMapView.kt  MapCleanerService.kt  Screen.kt  ScreenController.kt
minecraft/src/main/resources/: config.yml
native/: CMakeLists.txt
native/headers/: me_wcaleniewolny_ayaya_NativeControler.h
native/src/: colorlib.c  colorlib.h  library.c  library.h
native_old/: gcc.sh
native_old/src/: colorlib.c  library.c  library.h
src/main/kotlin/me/wcaleniewolny/ayaya/: FrameImageViewer.kt  FullImageViewer.kt  ImageViewer.kt  Main.kt  NativeControler.java  NativeRenderControler.java
src/main/kotlin/me/wcaleniewolny/ayaya/frame/: FrameSplitter.kt  SplittedFrame.kt
