[package]
name = "ayaya_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
ffmpeg-next = "5.1.1"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
vulkano = "0.31.0"
bytemuck = "1.8.0"
vulkano-shaders = "0.31.0"

[lib]
crate_type = ["cdylib"]

[profile.release]
strip = "symbols"
opt-level = 3
panic = "abort"