[workspace]
name = "ayaya_native" # the name of the package
members = ["main", "windows_bootstrap"]
default-members = ["main"]

[profile.release]
strip = "symbols"
opt-level = 3
panic = "unwind"

[profile.production]
inherits = "release"
codegen-units = 1

[profile.test] 
opt-level = 3

[patch.crates-io]
ffmpeg-next = { git = "https://github.com/FreezyLemon/rust-ffmpeg", branch = "non-exhaustive-enum" }
ffmpeg-sys-next = { git = "https://github.com/FreezyLemon/rust-ffmpeg-sys", branch = "non-exhaustive-enum" }
audiopus_sys = { git = "https://github.com/WcaleNieWolny/audiopus_sys.git", branch = "stable-changes" }
