[package]
name = "ayaya_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.20.0"
ffmpeg-next = "5.1.1"
#ffmpeg-next = { git = "https://github.com/zmwangx/rust-ffmpeg", branch = "master" }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
bytemuck = "1.12.3"
rand = "0.8.5"

[build-dependencies]
image = "0.24.5"

[patch.crates-io]
ffmpeg-next = { git = "https://github.com/FreezyLemon/rust-ffmpeg", branch = "non-exhaustive-enum" }
ffmpeg-sys-next = { git = "https://github.com/FreezyLemon/rust-ffmpeg-sys", branch = "non-exhaustive-enum" }

[lib]
crate_type = ["cdylib"]

[profile.release]
strip = "symbols"
opt-level = 3
panic = "unwind"

[profile.production]
inherits = "release"
codegen-units = 1

[profile.test] 
opt-level = 3
