[package]
name = "ayaya_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.20.0"
#ffmpeg-next = { git = "https://github.com/zmwangx/rust-ffmpeg", branch = "master" }
ffmpeg-next = { version = "5.1.1", optional = true }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
bytemuck = "1.12.3"
rand = "0.8.5"
cfg-if = "1.0.0"

[features]
ffmpeg = ["dep:ffmpeg-next"]
default = ["ffmpeg"]

[build-dependencies]
image = "0.24.5"

[lib]
crate_type = ["cdylib"]

