[package]
name = "ayaya_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.0"
#ffmpeg-next = { git = "https://github.com/zmwangx/rust-ffmpeg", branch = "master" }
ffmpeg-next = { version = "5.1.1", optional = true }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
bytemuck = "1.12.3"
rand = "0.8.5"
cfg-if = "1.0.0"
serenity = { git = "https://github.com/serenity-rs/serenity", features = ["client", "voice", "rustls_backend", "cache"], default-features = false, branch = "next" }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "next" }
symphonia = { version = "0.5.2", features = ["aac", "mp3", "isomp4", "alac"]}
once_cell = "1.17.1"
font-kit = "0.11.0"
pathfinder_geometry = "0.5.1"
libc = { version = "0.2.0", optional = true }

[features]
ffmpeg = ["dep:ffmpeg-next"]
skip_buildrs = []
external_player = ["dep:libc"]
default = ["ffmpeg"]

[build-dependencies]
image = "0.24.5"
cc = "1.0"
pkg-config = "0.3.26"

[lib]
crate_type = ["cdylib"]
