[package]
name = "windows_bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.20.0"
anyhow = "1.0"
winapi = { version = "0.3", features = ["winbase"] }
libloading = "0.7.4"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6.3"

[lib]
crate_type = ["cdylib"]